[package]
name = "downgrade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "downgrade"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
chrono = "0.4"
futures = "0.3"
crates_io_api = { version = "0.8", default-features = false, features = ["rustls"] }
tokio = { version = "1.0", features = ["full"] }
cargo-lock = { version = "9.0", features = ["dependency-tree"] }
log = "0.4"
simple_logger = { version = "4.2", features = ["stderr"] }
petgraph = "0.6"
clap = { version = "4.4", features = ["derive"] }
